logs/Slang/generic/class/class_test_13.sv.log
name: class_test_13
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_13.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_13.sv:7:1: error: language feature not yet supported
class Foo #(int W=8, type Int=int) extends Bar #(x,y,z);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
